feat: 共有グループの作成機能の実装と他設定機能の調整
